--- a/index.html
+++ b/index.html
@@ -8,8 +8,25 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="modal" id="myModal">
+        <h1>Alone? or with Player 2?</h1>
+        <button id="alone">Alone</button>
+        <button id="notAlone">2 Player</button>
+    </div>
     <div class="content">
-        <div class="tikTacToe"></div>
+        <div class="obox"></div>
+        <div class="xbox"></div>
+        <div class="tikTacToe">
+            <div class="box" id="1"></div>
+            <div class="box" id="2"></div>
+            <div class="box" id="3"></div>
+            <div class="box" id="4"></div>
+            <div class="box" id="5"></div>
+            <div class="box" id="6"></div>
+            <div class="box" id="7"></div>
+            <div class="box" id="8"></div>
+            <div class="box" id="9"></div>
+        </div>
     </div>
     
 </body>
