--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <button id="notAlone">2 Player</button>
     </div>
     <div class="content">
-        <div class="obox"></div>
-        <div class="xbox"></div>
+        <div id='obox' class="obox"></div>
+        <div id="winBox"></div>
+        <div id='xbox' class="xbox"></div>
         <div class="tikTacToe">
+            <div class="box" id="0"></div>
             <div class="box" id="1"></div>
             <div class="box" id="2"></div>
             <div class="box" id="3"></div>
@@ -25,7 +27,6 @@
             <div class="box" id="6"></div>
             <div class="box" id="7"></div>
             <div class="box" id="8"></div>
-            <div class="box" id="9"></div>
         </div>
     </div>
     
