--- a/index.html
+++ b/index.html
@@ -1,35 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="modal" id="myModal">
-        <h1>Alone? or with Player 2?</h1>
-        <button id="alone">Alone</button>
-        <button id="notAlone">2 Player</button>
-    </div>
-    <div class="content">
-        <div id='obox' class="obox"></div>
-        <div id="winBox"></div>
-        <div id='xbox' class="xbox"></div>
-        <div class="tikTacToe">
-            <div class="box" id="0"></div>
-            <div class="box" id="1"></div>
-            <div class="box" id="2"></div>
-            <div class="box" id="3"></div>
-            <div class="box" id="4"></div>
-            <div class="box" id="5"></div>
-            <div class="box" id="6"></div>
-            <div class="box" id="7"></div>
-            <div class="box" id="8"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Simple Tic Tac Toe</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body id="body">
+    <div class="start_screen show">
+      <div><h1>SIMPLE</h1><h1>TIC TAC TOE</h1></div>
+      <div>
+        <label for="player1">Player 1:</label>
+        <input type="text" id="player1" name="player1" />  
+        <div id="player_2_name_div" class="hide">
+          <label for="player2">Player 2:</label> 
+          <input type="text" id="player2" name="player2" />
         </div>
+      </div>
+      <div>
+        <button id="start">Start Game</button>
+        <button id="rematch" class="hide">Rematch</button>
+        <button id="reset" class="hide">Reset</button>
+      </div>
+      <div class="game-mode">
+        <label for="mode">Select game mode:</label>
+        <select id="mode">
+          <option value="single">Single Player</option>
+          <option value="multi">Multiplayer</option>
+        </select>
+      </div>
+      <h1 id="winnerBox"></h1>
+      <div class="scoreBox">
+        <h1 id="p1score"></h1>
+        <h1 id="p2score"></h1>
+      </div>
     </div>
+    <h1>Tic Tac Toe</h1>
+    <div class="turn">
+      <div id="player1_turn_indiciator" class="turn_indicator">
+        <p></p>
+        <p>X</p>
+      </div>
+      <div id="player2_turn_indiciator">
+        <p></p>
+        <p>O</p>
+      </div>
+    </div>
+    <div class="game_container">
+      <div class="board">
+
+        <div class="cell" id='1' data-cell></div>
+        <div class="cell" id='2' data-cell></div>
+        <div class="cell" id='3' data-cell></div>
+
+        <div class="cell" id='4' data-cell></div>
+        <div class="cell" id='5' data-cell></div>
+        <div class="cell" id='6' data-cell></div>
+
+        <div class="cell" id='7' data-cell></div>
+        <div class="cell" id='8' data-cell></div>
+        <div class="cell" id='9' data-cell></div>
+      </div>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
+</html>
     
-</body>
-<script src="java.js"></script>
+  </body>
+  <script src="index.js"></script>
 </html>
