--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body id="body">
     <div class="start_screen show">
       <div><h1>SIMPLE</h1><h1>TIC TAC TOE</h1></div>
-      <div>
+      <div id="name_inputs">
         <label for="player1">Player 1:</label>
         <input type="text" id="player1" name="player1" />  
         <div id="player_2_name_div" class="hide">
