--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body id="body">
     <div class="start_screen show">
-      <div><h1>SIMPLE</h1><h1>TIC TAC TOE</h1></div>
+      <div><h1>TIC TAC TOE</h1></div>
       <div id="name_inputs">
         <label for="player1">Player 1:</label>
         <input type="text" id="player1" name="player1" />  
@@ -18,7 +18,6 @@
       </div>
       <div>
         <button id="start">Start Game</button>
-        <button id="rematch" class="hide">Rematch</button>
         <button id="reset" class="hide">Reset</button>
       </div>
       <div class="game-mode">
